# cpubench

./: CMakeLists.txt  README.md  allowpush.sh  build-cli.sh  build.sh  calc.py  calc_mp.py  calc_mps.py  calc_vec.py  cpu.py  cuda.py  initenv.sh  main-mt.py  main-th.py  main.py  matrix.py  stats.py
python/: README.md  calc_mps.py  compare.py  main-mt.py  main.py  mps.py  opencl.py
src/: bench.cpp  calc.cpp  calc.h  main.cpp  main_cli.cpp  matrix.cpp  mem.cpp  mem.h  meminfo.cpp  memutil.cpp  memutil.h  picalculatorwindow.cpp  picalculatorwindow.h  stream.cpp  stream_omp.cpp  window.cpp  window.h
